# CCMReader

./: CMakeLists.txt  LICENSE  README.md
ccmio/include/: ccmio.h  ccmiotypes.h
ccmio/lib/: ccmio.lib
plugin/: CMakeLists.txt  paraview.plugin
plugin/src/: CCMReader.xml  CMakeLists.txt  vtk.module  vtkCCMReader.cxx  vtkCCMReader.h
